# irontensor

./: .env  .gitignore  Cargo.toml  README.md
benchmarks/: compare.py  pytorch_benchmark.py  run.sh
benchmarks/results/: irontensor.json  pytorch.json
docs/: CODE_REVIEW.md  PRESENTATION.md  TRAINING_PIPELINE.md
src/: command_batch.rs  device.rs  error.rs  gpu_trace.rs  lib.rs  main.rs  precision.rs  rng.rs  tensor.rs
src/data/: dataset.rs  mod.rs
src/inference/: generator.rs  mod.rs  sampling.rs
src/logging/: formats.rs  inference_logger.rs  mod.rs  train_logger.rs  writer.rs
src/nn/: attention.rs  ffn.rs  linear.rs  mod.rs  model.rs  transformer.rs
src/ops/: attention.rs  bf16_ops.rs  dropout.rs  elementwise.rs  embedding.rs  flash_attention.rs  fused_linear_cross_entropy.rs  fused_rmsnorm_linear.rs  gemm.rs  kernel.rs  mod.rs  mps_gemm.rs  norm.rs  params.rs  reduction.rs  repeat_kv.rs  rope.rs  softmax.rs  transpose.rs
src/ops/backward/: dropout.rs  elementwise.rs  embedding.rs  gemm.rs  (+6 more)
src/optim/: lion.rs  mod.rs
src/profile/: categories.rs  mod.rs  report.rs  timer.rs
src/shaders/: attention.metal  bf16_ops.metal  dropout.metal  elementwise.metal  embedding.metal  flash_attention.metal  fused_linear_cross_entropy.metal  fused_rmsnorm_linear.metal  gemm.metal  lion.metal  loss.metal  norm.metal  reduction.metal  repeat_kv.metal  rope.metal  softmax.metal  transpose.metal
src/train/: backward.rs  cache.rs  callbacks.rs  checkpoint.rs  checkpoint_grad.rs  config.rs  forward.rs  helpers.rs  mod.rs  scheduler.rs  trainer.rs  training_loop.rs
(+23 files in other folders)
