[package]
name = "irontensor"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
objc2 = "0.6.3"
objc2-foundation = "0.3.2"
objc2-metal = { version = "0.3.2", features = ["MTLCaptureManager", "MTLDevice", "MTLCommandQueue"] }
objc2-metal-performance-shaders = "0.3.2"
block2 = "0.6"
half = "2.7"
memmap2 = "0.9"
tokenizers = "0.22.2"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
